force-app/main/default/objects/Payment__c/fields/Account_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Account_of_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Payment Account)</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>