force-app/main/default/objects/Payment__c/fields/Balance_for_email__c.field-meta.xml
<CustomField>
    <fullName>Balance_for_email__c</fullName>
    <formula>Payment_Plan__r.Outstanding_Balance__c -  Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance for email</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>