force-app/main/default/objects/Payment__c/fields/Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Balance_Remaining__c</fullName>
    <label>Balance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>