force-app/main/default/objects/Payment__c/fields/Employer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contact__c</fullName>
    <label>Employer Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>