force-app/main/default/objects/Payment__c/fields/New_Payment_Created__c.field-meta.xml
<CustomField>
    <fullName>New_Payment_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden Field</description>
    <label>New Payment Created?</label>
    <type>Checkbox</type>
</CustomField>