force-app/main/default/objects/Payment__c/fields/Next_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Due_Date__c</fullName>
    <formula>ADDMONTHS( Due_Date__c ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Payment Due Date</label>
    <type>Date</type>
</CustomField>