force-app/main/default/objects/Payment__c/fields/Payment_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Completed_Date__c</fullName>
    <label>Payment Completed Date</label>
    <type>Date</type>
</CustomField>