force-app/main/default/objects/Payment__c/fields/Payment_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Payment_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Received?</label>
    <type>Checkbox</type>
</CustomField>