force-app/main/default/objects/Payment__c/fields/Receipt_Code__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Code__c</fullName>
    <description>For every payment registered, a receipt must be create manually in the receipt book.</description>
    <externalId>true</externalId>
    <label>Receipt Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>