force-app/main/default/objects/Payment__c/fields/ReceiptCreated__c.field-meta.xml
<CustomField>
    <fullName>ReceiptCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReceiptCreated</label>
    <type>Checkbox</type>
</CustomField>