force-app/main/default/objects/Payment__c/validationRules/Should_have_email_to_be_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Should_have_email_to_be_Paid</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Email__c ), 
 ISPICKVAL( Payment_Status__c , &apos;Paid&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Payment_Status__c</errorDisplayField>
    <errorMessage>Payment needs to have E-mail field populated to be set to &quot;Paid&quot;</errorMessage>
</ValidationRule>