force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Student_Name__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>NAME</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Balance_Remaining__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>