force-app/main/default/objects/Payment__c/listViews/All_Overdue_Payments.listView-meta.xml
<ListView>
    <fullName>All_Overdue_Payments</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Overdue</value>
    </filters>
    <label>All Overdue Payments</label>
</ListView>